// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeDotsIcon: Component should render correctly 1`] = `
<three-dots.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;

exports[`ThreeDotsIcon: Component should render with custom styles 1`] = `
<three-dots.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "width": "60px",
    }
  }
/>
`;
